<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFondoPantalla">

    <include
        android:id="@+id/baseLayoutQMPResultado"
        layout="@layout/base_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tituloQMPResultado"
        style="@style/TextoPregunta"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/titulo_qmp_resultado"
        app:layout_constraintLeft_toRightOf="@id/btn_atras_config"
        app:layout_constraintRight_toLeftOf="@id/btn_sonido"
        app:layout_constraintTop_toTopOf="parent" />

    <GridView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/grilla_conjuntos"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="5sp"
        android:layout_marginBottom="5sp"
        android:background="@drawable/contenedor_grilla_vestuario"
        android:clipToPadding="true"
        android:columnWidth="@dimen/qmp_resultado_conjunto_ancho"
        android:gravity="center"
        android:horizontalSpacing="10dp"
        android:numColumns="auto_fit"
        android:paddingLeft="5dp"
        android:paddingTop="10dp"
        android:paddingRight="5dp"
        android:paddingBottom="5dp"
        android:scrollbarFadeDuration="0"
        android:stretchMode="columnWidth"
        android:verticalSpacing="10dp"
        app:layout_constraintBottom_toTopOf="@+id/repetir_btn"
        app:layout_constraintLeft_toRightOf="@id/btn_atras_config"
        app:layout_constraintRight_toLeftOf="@id/btn_sonido"
        app:layout_constraintTop_toBottomOf="@id/tituloQMPResultado" />

    <ar.uba.fi.armariovirtual.utils.BotonSombra
        android:id="@+id/repetir_btn"
        style="@style/BotonChato"
        android:text="@string/boton_qmp_repetir"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/salir_btn"
        app:layout_constraintStart_toEndOf="@id/btn_ayuda" />

    <ar.uba.fi.armariovirtual.utils.BotonSombra
        android:id="@+id/salir_btn"
        style="@style/BotonChato"
        android:text="@string/boton_qmp_salir"
        app:layout_constraintBottom_toBottomOf="@id/repetir_btn"
        app:layout_constraintEnd_toStartOf="@id/btn_info"
        app:layout_constraintStart_toEndOf="@id/repetir_btn"
        app:layout_constraintTop_toTopOf="@id/repetir_btn" />

</android.support.constraint.ConstraintLayout>